adding jea paper

--- a/research.html
+++ b/research.html
@@ -124,7 +124,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse ten
 <b>*</b> : The authors are listed in alphabetical order by lastname.
 
 <h3 style="font-size: 16pt">
-Algorithms and data structures for hyperedge queries*
+Algorithms and Data Structures for Hyperedge Queries*
 </h3>
 <h4 style="font-size: 13pt"><i>Jules Bertrand,&#32;Fanny Dufoss&eacute;,&#32;Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
 <h4 style="font-size: 13pt">in ACM JEA 2022.</h4> 
@@ -133,9 +133,10 @@ Algorithms and data structures for hyperedge queries*
    (abstract) 
   </a>
 
-  <a href="#">(pdf)</a>
+  <a href="docs/papers/jea22.pdf" target="_blank">(pdf)</a>
   <a href="https://hal.inria.fr/hal-03905905" target="_blank">(preprint)</a>
   <a href="https://dl.acm.org/doi/10.1145/3568421" target="_blank">(doi)</a>
+  <a href="https://gitlab.inria.fr/bora-ucar/hedge-queries" target="_blank">(code)</a>
 </p>
 
 <p class="collapse" id="jea22" style="font-size: 11pt">
