--- a/misc.html
+++ b/misc.html
@@ -182,6 +182,15 @@
 </dl>
 </li>
 
+<li>
+<dl>
+    Program Committee: 
+
+  <a href= "https://hpc.pnl.gov/grapl/" target="_blank"> 
+       GrAPL 2023</a> (IPDPSW).
+	
+</dl>
+</li>
 
 <li>
 <dl>
