--- a/misc.html
+++ b/misc.html
@@ -196,9 +196,13 @@
 <dl>
     Extended Review Committee: 
 
+  <a href= "https://2023.ecoop.org/committee/ecoop-2023-research-papers-extended-review-committee" target="_blank"> 
+       ECOOP 2023</a>,
+
   <a href= "https://2022.ecoop.org/committee/ecoop-2022-papers-extended-review-committee-" target="_blank"> 
        ECOOP 2022</a>.
 	
+
 </dl>
 </li>
 
