--- a/misc.html
+++ b/misc.html
@@ -220,6 +220,9 @@
 <dl>
     Artifact Evaluation Committee: 
 
+  <a href= "https://etaps.org/2023/fossacs?id=541" target="_blank"> 
+        ESOP and FoSSaCS 2023</a>,
+
   <a href= "https://2023.ecoop.org/committee/ecoop-2023-artifact-evaluation-artifact-evaluation-committee" target="_blank"> 
         ECOOP 2023</a>,
 
