--- a/research.html
+++ b/research.html
@@ -100,7 +100,7 @@ My research interests span the broad areas of high-performance computing and par
 
 The focus of my Ph.D. research was on accelerating parallel graph processing using approximate computing. Details about my Ph.D. dissertation can be found <a href="phddissertation.html">here</a>.
 
-Currently, my focus is on optimizing and enhancing the performance of sparse tensor computations on parallel architectures.
+Currently, my focus is on optimizing and enhancing the performance of sparse matrix and tensor computations on parallel architectures.
 </p>
 
 <hr />
