--- a/misc.html
+++ b/misc.html
@@ -220,7 +220,7 @@
 <dl>
     Artifact Evaluation Committee: 
 
-  <a href= "https://etaps.org/2023/fossacs?id=541" target="_blank"> 
+  <a href= "https://etaps.org/2023/conferences/artifact-evaluation-esop-fossacs/" target="_blank"> 
         ESOP and FoSSaCS 2023</a>,
 
   <a href= "https://2023.ecoop.org/committee/ecoop-2023-artifact-evaluation-artifact-evaluation-committee" target="_blank"> 
