--- a/misc.html
+++ b/misc.html
@@ -287,7 +287,7 @@
   <a href= "https://sparsedays.cerfacs.fr/en/slides-2022/" target="_blank"> 
        Talk</a>
  at
-<a href="https://sparsedays.cerfacs.fr/en/" target="_blank"> 	
+<a href="https://sparsedays.cerfacs.fr/en/sparse-days-meeting-2022-in-saint-girons-iv/" target="_blank"> 	
 Sparse Days 2022</a>, Saint-Girons, France.
 
   <span style="float:right;font-weight:normal; font-style:italic">
