--- a/misc.html
+++ b/misc.html
@@ -232,7 +232,7 @@
   <a href= "https://pldi22.sigplan.org/committee/pldi-2022-PLDI-Research-Artifacts-artifact-evaluation-committee" target="_blank"> 
         PLDI 2022</a>,
 
-     <a href= "https://etaps.org/user-profile/archive/53-etaps-2022/491-esop-2022-artifact-evaluation" target="_blank"> 
+     <a href= "https://etaps.org/user-profile/archive/53-etaps-2022/491-esop-2022-artifact-evaluation.html" target="_blank"> 
         ESOP 2022</a>,
 
   <a href= "https://2022.ecoop.org/committee/ecoop-2022-artifacts-artifact-evaluation-committee" target="_blank"> 
