--- a/misc.html
+++ b/misc.html
@@ -220,6 +220,9 @@
 <dl>
     Artifact Evaluation Committee: 
 
+  <a href= "https://ccgrid2023.iisc.ac.in/" target="_blank"> 
+        CCGRID 2023</a>,
+
   <a href= "https://etaps.org/2023/conferences/artifact-evaluation-esop-fossacs/" target="_blank"> 
         ESOP and FoSSaCS 2023</a>,
 
