--- a/research.html
+++ b/research.html
@@ -17,6 +17,9 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- CSS for icons -->
+    <link href="css/academicons.min.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="css/mystylesheet.css" rel="stylesheet">
 
@@ -108,14 +111,17 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
 <p style="color:black">
 <h3><u>Publications</u>
  <span style="float:right; font-size:18px;">
- <button type="button" class="btn btn-primary btn-sm" style="font-size:15px;">
+<!-- 
+<button type="button" class="btn btn-primary btn-sm" style="font-size:15px;">
  <a href="https://dblp.uni-trier.de/pers/hd/s/Singh_0001:Somesh" target="_blank" style="color:inherit">DBLP</a>
  </button>
  
  <button type="button" class="btn btn-primary btn-sm " style="font-size:15px;">
  <a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ&hl=en&oi=ao" target="_blank" style="color:inherit">Google Scholar</a>
  </button>
-
+-->
+<a href="https://dblp.uni-trier.de/pid/226/7327-1.html" target="_blank" title="dblp"><i class="ai ai-dblp"></i></a>
+<a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
  </span>
  </h3>
 
