--- a/research.html
+++ b/research.html
@@ -121,7 +121,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
  </button>
 -->
 <a href="https://dblp.uni-trier.de/pid/226/7327-1.html" target="_blank" title="dblp"><i class="ai ai-dblp"></i></a>
-<a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
+<a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square ai-3x"></i></a>
  </span>
  </h3>
 
