--- a/research.html
+++ b/research.html
@@ -120,8 +120,8 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
  <a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ&hl=en&oi=ao" target="_blank" style="color:inherit">Google Scholar</a>
  </button>
 -->
-<a href="https://dblp.uni-trier.de/pid/226/7327-1.html" target="_blank" title="dblp"><i class="ai ai-dblp"></i></a>
-<a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+<a href="https://dblp.uni-trier.de/pid/226/7327-1.html" target="_blank" title="dblp"><i class="ai ai-dblp-square ai-2x"></i></a>
+<a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square ai-2x"></i></a>
  </span>
  </h3>
 
