--- a/research.html
+++ b/research.html
@@ -110,7 +110,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
 
 <p style="color:black">
 <h3><u>Publications</u>
- <span>
+ <span style="float:right;">
 <!-- 
 <button type="button" class="btn btn-primary btn-sm" style="font-size:15px;">
  <a href="https://dblp.uni-trier.de/pers/hd/s/Singh_0001:Somesh" target="_blank" style="color:inherit">DBLP</a>
@@ -120,9 +120,8 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
  <a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ&hl=en&oi=ao" target="_blank" style="color:inherit">Google Scholar</a>
  </button>
 -->
-<a href="https://dblp.uni-trier.de/pid/226/7327-1.html" target="_blank" title="dblp"><i class="ai ai-dblp-square ai-2x"></i></a>
-<a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square ai-2x"></i></a>
- </span>
+<a href="https://dblp.uni-trier.de/pid/226/7327-1.html" target="_blank" title="dblp"><i class="ai ai-dblp ai-sm"></i></a>
+<a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar ai-sm"></i></a> </span>
  </h3>
 
 </p>
