--- a/research.html
+++ b/research.html
@@ -110,7 +110,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
 
 <p style="color:black">
 <h3><u>Publications</u>
- <span style="position:relative; left: 5%;">
+ <span style="position:relative; left: 2%; top: 2px">
 <!-- 
 <button type="button" class="btn btn-primary btn-sm" style="font-size:15px;">
  <a href="https://dblp.uni-trier.de/pers/hd/s/Singh_0001:Somesh" target="_blank" style="color:inherit">DBLP</a>
