--- a/misc.html
+++ b/misc.html
@@ -287,6 +287,20 @@
 
 <li>
 <dl>
+  <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=125348" target="_blank"> 
+       Talk</a>
+ at
+<a href="https://www.siam.org/conferences/cm/conference/cse23" target="_blank"> 	
+SIAM CSE'23</a>, Amsterdam, The Netherlands.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    February 2023
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
   <a href= "https://sparsedays.cerfacs.fr/en/slides-2022/" target="_blank"> 
        Talk</a>
  at
@@ -359,7 +373,7 @@ Sparse Days 2022</a>, Saint-Girons, France.
 <li>
 <dl>
 [Virtual] 
-  <a href= "https://blogs.qub.ac.uk/graphprocessing/efficient-parallel-graph-processing-on-gpu-using-approximate-computing-by-somesh-singh/" target="_blank"> 
+  <a href= "https://blogs.qub.ac.uk/DIPSA/efficient-parallel-graph-processing-on-gpu-using-approximate-computing-by-somesh-singh/" target="_blank"> 
        Talk</a>
  at 
   <a href= "https://www.qub.ac.uk/schools/eeecs/" target="_blank"> 
