--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@ I am advised by
 My research focuses on designing techniques for accelerating large-scale graph analytics on -->
 <!-- <em>large</em> graphs using --> 
 <!-- GPUs, aided by approximate computing.-->
-I am a post-doctoral researcher with 
-<a href="https://www.inria.fr/" target="_blank">INRIA</a>
+I am a post-doctoral researcher  
+<!--
+ with <a href="https://www.inria.fr/" target="_blank">INRIA</a>
+-->
 in team 
 <a href="http://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA</a> 
 at 
