--- a/misc.html
+++ b/misc.html
@@ -210,7 +210,7 @@
 <dl>
     Subreviewer: 
 
-  <a href= "https://hipc.org/" target="_blank"> 
+  <a href= "https://hipc.org/hipc2022/" target="_blank"> 
        HiPC 2022</a>.
 	
 </dl>
