--- a/misc.html
+++ b/misc.html
@@ -284,6 +284,20 @@
 
 <li>
 <dl>
+  <a href= "https://www.isc-hpc.com/speakers-2023.html" target="_blank"> 
+       Talk</a>
+ at
+<a href="https://www.isc-hpc.com/" target="_blank"> 	
+ISC 2023</a>, Hamburg, Germany.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    May 2023
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
   <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=125348" target="_blank"> 
        Talk</a>
  at
