--- a/research.html
+++ b/research.html
@@ -132,7 +132,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
 <h3 style="font-size: 16pt">
 Engineering Fast Algorithms for the Bottleneck Matching Problem*
 </h3>
-<h4 style="font-size: 13pt"><i>Ioannis Panagiotas,&#32;Gre&eacute;goire Pichon,&#32;Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
+<h4 style="font-size: 13pt"><i>Ioannis Panagiotas,&#32;Gr&eacute;goire Pichon,&#32;Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
 <h4 style="font-size: 13pt">in ESA 2023.</h4> 
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#esa23" aria-expanded="false" aria-controls="esa23">
