--- a/research.html
+++ b/research.html
@@ -164,7 +164,7 @@ remains low.
 Effective Parallelization of the Vehicle Routing Problem
 </h3>
 <h4 style="font-size: 13pt"><i>Rajesh Pandian M,&#32;Somesh Singh,&#32;Rupesh Nasre,&#32;N.S. Narayanaswamy,</i></h4>
-<h4 style="font-size: 13pt">in ACM GECCO 2023.</h4> 
+<h4 style="font-size: 13pt">in GECCO 2023.</h4> 
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#gecco23" aria-expanded="false" aria-controls="gecco23">
    (abstract) 
