--- a/research.html
+++ b/research.html
@@ -140,8 +140,9 @@ Engineering Fast Algorithms for the Bottleneck Matching Problem*
   </a>
 
   <a href="#" target="_blank">(pdf)</a>
+  <a href="https://inria.hal.science/hal-04146298" target="_blank">(preprint)</a>
   <a href="#" target="_blank">(doi)</a>
-  <a href="#" target="_blank">(code)</a>
+  <a href="https://gitlab.inria.fr/bora-ucar/bottled" target="_blank">(code)</a>
 </p>
 
 <p class="collapse" id="esa23" style="font-size: 11pt">
