--- a/research.html
+++ b/research.html
@@ -172,7 +172,7 @@ Effective Parallelization of the Vehicle Routing Problem
   </a>
 
   <a href="docs/papers/gecco23.pdf" target="_blank">(pdf)</a>
-  <a href="#" target="_blank">(doi)</a>
+  <a href="https://doi.org/10.1145/3583131.3590458" target="_blank">(doi)</a>
 </p>
 
 <p class="collapse" id="gecco23" style="font-size: 11pt">
@@ -202,7 +202,7 @@ Algorithms and Data Structures for Hyperedge Queries*
 
   <a href="docs/papers/jea22.pdf" target="_blank">(pdf)</a>
   <a href="https://hal.inria.fr/hal-03905905" target="_blank">(preprint)</a>
-  <a href="https://dl.acm.org/doi/10.1145/3568421" target="_blank">(doi)</a>
+  <a href="https://doi.org/10.1145/3568421" target="_blank">(doi)</a>
   <a href="https://gitlab.inria.fr/bora-ucar/hedge-queries" target="_blank">(code)</a>
 </p>
 
