--- a/misc.html
+++ b/misc.html
@@ -173,6 +173,9 @@
           certificate</a>
   ],
   
+  <a href= "https://www.sciencedirect.com/journal/computer-physics-communications" target="_blank"> 
+	  Computer Physics Communications</a> (2023),
+
   <a href= "https://www.springer.com/journal/41403" target="_blank"> 
       Transactions of the Indian National Academy of Engineering</a> (2022, 2018),
 
