esa paper details

--- a/research.html
+++ b/research.html
@@ -139,9 +139,9 @@ Engineering Fast Algorithms for the Bottleneck Matching Problem*
    (abstract) 
   </a>
 
-  <a href="#" target="_blank">(pdf)</a>
+  <a href="docs/papers/esa23.pdf" target="_blank">(pdf)</a>
   <a href="https://inria.hal.science/hal-04146298" target="_blank">(preprint)</a>
-  <a href="#" target="_blank">(doi)</a>
+  <a href="https://doi.org/10.4230/LIPIcs.ESA.2023.87" target="_blank">(doi)</a>
   <a href="https://gitlab.inria.fr/bora-ucar/bottled" target="_blank">(code)</a>
 </p>
 
