--- a/misc.html
+++ b/misc.html
@@ -287,7 +287,7 @@
 
 <li>
 <dl>
-  <a href= "https://www.isc-hpc.com/speakers-2023.html" target="_blank"> 
+  <a href= "https://app.swapcard.com/event/isc-high-performance-2023/planning/UGxhbm5pbmdfMTIyMDgxNg==" target="_blank"> 
        Talk</a>
  at
 <a href="https://www.isc-hpc.com/" target="_blank"> 	
