talk at Bordeaux

--- a/misc.html
+++ b/misc.html
@@ -287,6 +287,19 @@
 
 <li>
 <dl>
+  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/" target="_blank"> 
+       Talk</a>
+ at
+<a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    December 2023
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
   <a href= "https://app.swapcard.com/event/isc-high-performance-2023/planning/UGxhbm5pbmdfMTIyMDgxNg==" target="_blank"> 
        Talk</a>
  at
