augmenting the update

--- a/misc.html
+++ b/misc.html
@@ -359,7 +359,9 @@ Sparse Days 2022</a>, Saint-Girons, France.
   <a href= "http://www.ens-lyon.fr/LIP/ROMA/workinggroup.php" target="_blank"> 
        Talk</a>
  at
-<a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>.
+<a href="https://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA Inria Team</a>
+at
+<a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, Lyon, France.    
 
   <span style="float:right;font-weight:normal; font-style:italic">
     March 2022
