--- a/misc.html
+++ b/misc.html
@@ -223,6 +223,9 @@
 <dl>
     Artifact Evaluation Committee: 
 
+  <a href= "https://pldi24.sigplan.org/committee/pldi-2024-pldi-research-artifacts-artifact-evaluation-committee" target="_blank"> 
+        PLDI 2024</a>,
+
   <a href= "https://etaps.org/2023/conferences/artifact-evaluation-esop-fossacs/" target="_blank"> 
         ESOP and FoSSaCS 2023</a>,
 
