--- a/misc.html
+++ b/misc.html
@@ -189,7 +189,7 @@
 <dl>
     Program Committee: 
 
-  <a href= "https://hpc.pnl.gov/grapl/" target="_blank"> 
+  <a href= "https://hpc.pnl.gov/grapl/previous/2023/" target="_blank"> 
        GrAPL 2023</a> (IPDPSW).
 	
 </dl>
