--- a/research.html
+++ b/research.html
@@ -141,7 +141,7 @@ BANG: Billion-Scale Approximate Nearest Neighbor Search using a Single GPU
 
   <a href="docs/papers/arxiv24a.pdf" target="_blank">(pdf)</a>
   <a href="https://arxiv.org/abs/2401.11324" target="_blank">(preprint)</a>
-  <a href="#" target="_blank">(doi)</a>
+  <a href="https://doi.org/10.48550/arXiv.2401.11324" target="_blank">(doi)</a>
 </p>
 
 <p class="collapse" id="vldb24" style="font-size: 11pt">
