--- a/research.html
+++ b/research.html
@@ -133,7 +133,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
 BANG: Billion-Scale Approximate Nearest Neighbor Search using a Single GPU
 </h3>
 <h4 style="font-size: 13pt"><i>Karthik V, Saim Khan, Somesh Singh, Harsha Vardhan Simhadri, Jyothi Vedurada,</i></h4>
-<h4 style="font-size: 13pt"><em>arXiv preprint arXiv:2401.11324</em>, 2024.</h4> 
+<h4 style="font-size: 13pt">arXiv preprint <em>arXiv:2401.11324</em>, 2024.</h4> 
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#vldb24" aria-expanded="false" aria-controls="vldb24">
    (abstract) 
