--- a/research.html
+++ b/research.html
@@ -153,7 +153,7 @@ Approximate Nearest Neighbour Search (ANNS) is a subroutine in algorithms routin
 Engineering Fast Algorithms for the Bottleneck Matching Problem*
 </h3>
 <h4 style="font-size: 13pt"><i>Ioannis Panagiotas,&#32;Gr&eacute;goire Pichon,&#32;Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
-<h4 style="font-size: 13pt">in ESA 2023.</h4> 
+<h4 style="font-size: 13pt">in European Symposium on Algorithms (ESA), 2023.</h4> 
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#esa23" aria-expanded="false" aria-controls="esa23">
    (abstract) 
@@ -185,7 +185,7 @@ remains low.
 Effective Parallelization of the Vehicle Routing Problem
 </h3>
 <h4 style="font-size: 13pt"><i>Rajesh Pandian M,&#32;Somesh Singh,&#32;Rupesh Nasre,&#32;N.S. Narayanaswamy,</i></h4>
-<h4 style="font-size: 13pt">in GECCO 2023.</h4> 
+<h4 style="font-size: 13pt">in Genetic and Evolutionary Computation Conference (GECCO), 2023.</h4> 
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#gecco23" aria-expanded="false" aria-controls="gecco23">
    (abstract) 
@@ -214,7 +214,7 @@ solution quality. Furthermore, our reported solutions are close to the current b
 Algorithms and Data Structures for Hyperedge Queries*
 </h3>
 <h4 style="font-size: 13pt"><i>Jules Bertrand,&#32;Fanny Dufoss&eacute;,&#32;Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
-<h4 style="font-size: 13pt">in ACM JEA 2022.</h4> 
+<h4 style="font-size: 13pt">in ACM Journal of Experimental Algorithmics (JEA), 2022.</h4> 
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#jea22" aria-expanded="false" aria-controls="jea22">
    (abstract) 
@@ -234,7 +234,7 @@ We consider the problem of querying the existence of hyperedges in hypergraphs. 
 An Efficient Parallel Implementation of a Perfect Hashing Method for Hypergraphs*
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
-<h4 style="font-size: 13pt">in GrAPL: Workshop on Graphs, Architectures, Programming, and Learning (IPDPSW) 2022. </h4>
+<h4 style="font-size: 13pt">in GrAPL: Workshop on Graphs, Architectures, Programming, and Learning, IPDPSW 2022. </h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#grapl22" aria-expanded="false" aria-controls="grapl22">
    (abstract) 
@@ -260,7 +260,7 @@ We experimentally compare the resulting parallel algorithms with the state-of-th
 ParTBC: Faster Estimation of Top-<em>k</em> Betweenness Centrality Vertices on GPU
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Tejas Shah,&#32;Rupesh Nasre,</i></h4>
-<h4 style="font-size: 13pt">in ACM TODAES 2021. </h4>
+<h4 style="font-size: 13pt">in ACM Transactions on Design Automation of Electronic Systems (TODAES), 2021. </h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#todaes21" aria-expanded="false" aria-controls="todaes21">
    (abstract) 
@@ -279,7 +279,7 @@ is computing the BC of all the vertices unnecessary but also exact BC values nee
 Graffix: Efficient Graph Processing with a Tinge of GPU-Specific Approximations
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
-<h4 style="font-size: 13pt">in ICPP 2020. </h4>
+<h4 style="font-size: 13pt">in International Conference on Parallel Processing (ICPP), 2020. </h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#icpp20" aria-expanded="false" aria-controls="icpp20">
    (abstract) 
@@ -308,7 +308,7 @@ varied characteristics and five popular graph algorithms.
  <h4 style="font-size: 13pt"><font color="#696969">with</font> <i> R. De Maria, J. Andersson, V.K. Berglyd Olsen, L. Field, M. Giovannozzi, P.D. Hermes, N. H&#248imyr,
  S. Kostoglou, G. Iadarola, E. Mcintosh, A. Mereghetti, J. Molson, D. Pellegrini,
  T. Persson, M. Schwinzerl, E.H. Maclean, K.N. Sjobak, I. Zacharov, </i> <!-- <i>et al.</i>  --> </h4>
- <h4 style="font-size: 13pt">in International Journal of Modern Physics A 2019. (Invited Paper)</h4>
+ <h4 style="font-size: 13pt">in International Journal of Modern Physics A, 2019. (Invited Paper)</h4>
  <p style="font-size: 11pt">
    <a data-toggle="collapse" href="#ijmpa" aria-expanded="false" aria-controls="ijmpa">
     (abstract) 
@@ -336,7 +336,7 @@ This contribution presents the status of the code, summarizes the main existing 
 Optimizing Graph Processing on GPUs using Approximate Computing: Poster
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
-<h4 style="font-size: 13pt">in PPoPP 2019.</h4>
+<h4 style="font-size: 13pt">in ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming (PPoPP), 2019.</h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#ppopp19" aria-expanded="false" aria-controls="ppopp19">
    (abstract) 
@@ -361,7 +361,7 @@ Our approximations for coalescing, memory latency and thread-divergence lead to 
  <h4 style="font-size: 13pt"><font color="#696969">with</font> <i> R. De Maria, J. Andersson, V.K. Berglyd Olsen, L. Field, M. Giovannozzi, P.D. Hermes, N. H&#248imyr,
  S. Kostoglou, G. Iadarola, E. Mcintosh, A. Mereghetti, J. Molson, D. Pellegrini,
  T. Persson, M. Schwinzerl, E.H. Maclean, K.N. Sjobak, I. Zacharov, </i> <!-- <i>et al.</i>  --> </h4>
- <h4 style="font-size: 13pt">in International Computational Accelerator Physics Conference 2018.</h4>
+ <h4 style="font-size: 13pt">in International Computational Accelerator Physics Conference (ICAP), 2018.</h4>
  <p style="font-size: 11pt">
    <a data-toggle="collapse" href="#icap" aria-expanded="false" aria-controls="icap">
     (abstract) 
@@ -392,7 +392,7 @@ This contribution presents the status of the code and an outlook on future devel
 Scalable and Performant Graph Processing on GPUs using Approximate Computing
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
-<h4 style="font-size: 13pt">in IEEE TMSCS 2018. </h4>
+<h4 style="font-size: 13pt">in IEEE Transactions on Multi-Scale Computing Systems (TMSCS), 2018. </h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#tmscs" aria-expanded="false" aria-controls="tmscs">
    (abstract) 
