--- a/misc.html
+++ b/misc.html
@@ -290,7 +290,7 @@
 
 <li>
 <dl>
-  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/" target="_blank"> 
+  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/#org1466891" target="_blank"> 
        Talk</a>
  at
 <a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
