--- a/misc.html
+++ b/misc.html
@@ -213,6 +213,9 @@
 <dl>
     Subreviewer: 
 
+  <a href= "https://sc24.supercomputing.org/" target="_blank"> 
+       SC 2024</a>,
+
   <a href= "https://hipc.org/hipc2022/" target="_blank"> 
        HiPC 2022</a>.
 	
