--- a/misc.html
+++ b/misc.html
@@ -154,10 +154,10 @@
     Reviewer: 
 
   <a href= "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71" target="_blank"> 
-	  IEEE Transactions on Parallel and Distributed Systems</a> (2021),
+	  IEEE Transactions on Parallel and Distributed Systems</a> (since 2021),
 
   <a href= "https://dl.acm.org/journal/taco" target="_blank"> 
-	  ACM Transactions on Architecture and Code Optimization</a> (2022),
+	  ACM Transactions on Architecture and Code Optimization</a> (since 2022),
 
   <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank"> 
 	  Parallel Computing</a> (2021-22)
@@ -167,7 +167,7 @@
   ],
 
   <a href= "https://onlinelibrary.wiley.com/journal/15320634" target="_blank"> 
-	  Concurrency and Computation: Practice and Experience</a> (2021-22)
+	  Concurrency and Computation: Practice and Experience</a> (since 2021)
   [
   <a href="docs/certificates/CPE_Reviewer_Certificate_2021.pdf" target="_blank">
           certificate</a>
@@ -177,10 +177,10 @@
 	  Computer Physics Communications</a> (2023),
 
   <a href= "https://www.springer.com/journal/41403" target="_blank"> 
-      Transactions of the Indian National Academy of Engineering</a> (2022, 2018),
+      Transactions of the Indian National Academy of Engineering</a> (since 2018),
 
   <a href= "https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=4563995" target="_blank"> 
-	 IEEE Embedded Systems Letters</a> (2017).
+	 IEEE Embedded Systems Letters</a> (since 2017).
 	
 </dl>
 </li>
