--- a/misc.html
+++ b/misc.html
@@ -160,7 +160,7 @@
 	  ACM Transactions on Architecture and Code Optimization</a> (since 2022),
 
   <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank"> 
-	  Parallel Computing</a> (2021-22)
+	  Parallel Computing</a> (since 2021)
   [
   <a href="docs/certificates/PARCO_Reviewer_Certificate_2021.pdf" target="_blank">
           certificate</a>
@@ -174,7 +174,7 @@
   ],
   
   <a href= "https://www.sciencedirect.com/journal/computer-physics-communications" target="_blank"> 
-	  Computer Physics Communications</a> (2023),
+	  Computer Physics Communications</a> (since 2023),
 
   <a href= "https://www.springer.com/journal/41403" target="_blank"> 
       Transactions of the Indian National Academy of Engineering</a> (since 2018),
