--- a/misc.html
+++ b/misc.html
@@ -161,17 +161,13 @@
 
   <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank"> 
 	  Parallel Computing</a> (since 2021)
-  [
-  <a href="docs/certificates/PARCO_Reviewer_Certificate_2021.pdf" target="_blank">
-          certificate</a>
-  ],
+  [<a href="docs/certificates/PARCO_Reviewer_Certificate_2021.pdf" target="_blank">
+          certificate</a>],
 
   <a href= "https://onlinelibrary.wiley.com/journal/15320634" target="_blank"> 
 	  Concurrency and Computation: Practice and Experience</a> (since 2021)
-  [
-  <a href="docs/certificates/CPE_Reviewer_Certificate_2021.pdf" target="_blank">
-          certificate</a>
-  ],
+  [<a href="docs/certificates/CPE_Reviewer_Certificate_2021.pdf" target="_blank">
+          certificate</a>],
   
   <a href= "https://www.sciencedirect.com/journal/computer-physics-communications" target="_blank"> 
 	  Computer Physics Communications</a> (since 2023),
