update research statement

--- a/research.html
+++ b/research.html
@@ -98,12 +98,18 @@
 <h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Research </h3>
 
 <p>
+<!--
 My research interests span the broad areas of high-performance computing and parallel computing, with an emphasis on making the processing of irregular-workloads on parallel platforms more efficient.
-
+-->
+My research centers around high-performance parallel computing with an emphasis on sparse irregular computations.
 
 The focus of my Ph.D. research was on accelerating parallel graph processing using approximate computing. Details about my Ph.D. dissertation can be found <a href="phddissertation.html">here</a>.
 
+My current focus is on designing and developing methods and techniques for high-performance sparse tensor computations.
+
+<!--
 Currently, my focus is on optimizing and enhancing the performance of sparse matrix and tensor computations on parallel architectures.
+-->
 </p>
 
 <hr />
