--- a/research.html
+++ b/research.html
@@ -145,7 +145,7 @@ BANG: Billion-Scale Approximate Nearest Neighbour Search using a Single GPU
    (abstract) 
   </a>
 
-  <a href="docs/papers/arxiv24b.pdf" target="_blank">(pdf)</a>
+  <!-- <a href="docs/papers/arxiv24b.pdf" target="_blank">(pdf)</a> -->
   <a href="https://arxiv.org/abs/2401.11324" target="_blank">(preprint)</a>
   <a href="https://doi.org/10.48550/arXiv.2401.11324" target="_blank">(doi)</a>
 </p>
