--- a/research.html
+++ b/research.html
@@ -419,6 +419,18 @@ benefits. We also study the effects of the approximations on GPU-based processin
 
 <hr />
 
+<p style="color:black">
+<h3><u>Patents</u></h3>
+</p>
+
+<h3 style="font-size: 16pt">
+Method and System for Performing Approximate Nearest Neighbour Search on Billion-Scale Vectors
+</h3>
+<h4 style="font-size: 13pt"><i>Karthik V, Somesh Singh, Harsha Vardhan Simhadri, Jyothi Vedurada,</i></h4>
+<h4 style="font-size: 13pt">Indian Patent, filed 2024 (patent pending).</h4> 
+
+<hr />
+
 <h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Other Projects </h3>
 </br>
 
