--- a/research.html
+++ b/research.html
@@ -426,8 +426,8 @@ benefits. We also study the effects of the approximations on GPU-based processin
 <h3 style="font-size: 16pt">
 Method and System for Performing Approximate Nearest Neighbour Search on Billion-Scale Vectors
 </h3>
-<h4 style="font-size: 13pt"><i>Karthik V, Somesh Singh, Harsha Vardhan Simhadri, Jyothi Vedurada.</i></h4>
-<h4 style="font-size: 13pt">Indian Patent, filed 2024. [<b>patent pending</b>]</h4> 
+<h4 style="font-size: 13pt"><i>Karthik V, Somesh Singh, Harsha Vardhan Simhadri, Jyothi Vedurada,</i></h4>
+<h4 style="font-size: 13pt">Indian Patent, filed 2024. (Patent Pending)</h4> 
 
 <hr />
 
