--- a/misc.html
+++ b/misc.html
@@ -211,7 +211,7 @@
   <a href= "https://sc24.supercomputing.org/" target="_blank"> 
        SC 2024</a>,
 
-  <a href= "https://hipc.org/hipc2022/" target="_blank"> 
+  <a href= "https://2022.hipc.org/" target="_blank"> 
        HiPC 2022</a>.
 	
 </dl>
