--- a/misc.html
+++ b/misc.html
@@ -288,7 +288,20 @@
 
 <li>
 <dl>
-  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/#org1466891" target="_blank"> 
+  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/#org2a8a16d" target="_blank"> 
+       Talk</a>
+ at
+<a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    March 2024
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+  <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/#org9cc64dc" target="_blank"> 
        Talk</a>
  at
 <a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
