--- a/research.html
+++ b/research.html
@@ -136,7 +136,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
 <b>*</b> : The authors are listed in alphabetical order by lastname.
 
 <h3 style="font-size: 16pt">
-Efficient parallel sparse tensor contraction
+Efficient Parallel Sparse Tensor Contraction*
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
 <h4 style="font-size: 13pt">as a Technical Report on HAL, 2024.</h4>
