--- a/research.html
+++ b/research.html
@@ -157,7 +157,7 @@ We investigate the performance of algorithms for sparse tensor-sparse tensor mul
 BANG: Billion-Scale Approximate Nearest Neighbour Search using a Single GPU
 </h3>
 <h4 style="font-size: 13pt"><i>Karthik V, Saim Khan, Somesh Singh, Harsha Vardhan Simhadri, Jyothi Vedurada,</i></h4>
-<h4 style="font-size: 13pt">arXiv preprint <em>arXiv:2401.11324</em>, 2024.</h4>
+<h4 style="font-size: 13pt">as arXiv preprint <em>arXiv:2401.11324</em>, 2024.</h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#tbd24" aria-expanded="false" aria-controls="tbd24">
    (abstract)
