add artifact badge

--- a/research.html
+++ b/research.html
@@ -247,7 +247,7 @@ Algorithms and Data Structures for Hyperedge Queries*
   <a href="docs/papers/jea22.pdf" target="_blank">(pdf)</a>
   <a href="https://hal.inria.fr/hal-03905905" target="_blank">(preprint)</a>
   <a href="https://doi.org/10.1145/3568421" target="_blank">(doi)</a>
-  <a href="https://gitlab.inria.fr/bora-ucar/hedge-queries" target="_blank">(code)</a>[ACM Results Reproduced Badge]
+  <a href="https://gitlab.inria.fr/bora-ucar/hedge-queries" target="_blank">(code)</a> <img src="img/acm_results_reproduced_v1_1.png" alt="[ACM Results Reproduced Badge]">
 </p>
 
 <p class="collapse" id="jea22" style="font-size: 11pt">
