--- a/research.html
+++ b/research.html
@@ -247,7 +247,10 @@ Algorithms and Data Structures for Hyperedge Queries*
   <a href="docs/papers/jea22.pdf" target="_blank">(pdf)</a>
   <a href="https://hal.inria.fr/hal-03905905" target="_blank">(preprint)</a>
   <a href="https://doi.org/10.1145/3568421" target="_blank">(doi)</a>
-  <a href="https://gitlab.inria.fr/bora-ucar/hedge-queries" target="_blank">(code)</a> <img src="img/acm_results_reproduced_v1_1.png" alt="[ACM Results Reproduced Badge]" width="32" height="32" style="padding: 5px;" border="0">
+  <a href="https://gitlab.inria.fr/bora-ucar/hedge-queries" target="_blank">(code)</a>
+    <a href="https://www.acm.org/publications/policies/artifact-review-and-badging-current#reproduced" target="_blank">
+  <img src="img/acm_results_reproduced_v1_1.png" alt="[ACM Results Reproduced Badge]" width="32" height="32" style="padding: 5px;" border="0">
+    </a>
 </p>
 
 <p class="collapse" id="jea22" style="font-size: 11pt">
