--- a/research.html
+++ b/research.html
@@ -249,8 +249,8 @@ Algorithms and Data Structures for Hyperedge Queries*
   <a href="https://doi.org/10.1145/3568421" target="_blank">(doi)</a>
   <a href="https://gitlab.inria.fr/bora-ucar/hedge-queries" target="_blank">(code)</a>
     <a href="https://www.acm.org/publications/policies/artifact-review-and-badging-current#reproduced" target="_blank">
-<span style="color: #23007d">[ACM Results Reproduced Badge]</span>
-  <img src="img/acm_results_reproduced_v1_1.png" alt="" width="64" height="64" style="padding: 5px;" border="0">
+<span style="color: #23007d; font-weight:bold;">[ACM Results Reproduced Badge]</span>
+  <img src="img/acm_results_reproduced_v1_1.png" alt="" width="32" height="32" border="0">
     </a>
 </p>
 
